cree el formulario de la pagina

--- a/registro.html
+++ b/registro.html
@@ -40,8 +40,30 @@
           <li>100 descargas para disfrutar offline</li>
          </ul>
        </div>
-       
       </div>
+
+      <form action="">
+        <label for="plan">Selecciona tu plan</label>
+         <select name="plan" id="plan">
+          <option value="Basico">Basico</option>
+          <option value="Estandar">Estandar</option>
+          <option value="Premium">Premium</option>
+         </select>
+
+         <label for="nombre">Nombre</label>
+          <input type="text" id="nombre" name="nombre" required>
+
+          <label for="apellido">Apellido</label>
+           <input type="text" id="apellido" name="apellido" required>
+
+           <label for="email">Email</label>
+            <input type="email" id="email" name="email" required>
+
+            <label for="password">Contraseña</label>
+            <input type="password" id="password" name="password" required>
+
+            <button type="submit">Crear cuenta</button>
+      </form>
     </section>
 
 
