--- a/categorias.html
+++ b/categorias.html
@@ -114,7 +114,12 @@
                       alt=""
                     />
                   </div>
-                  <div class="pelicula"> <img src="/img/categorias/comedia/MiSuegrameOdia.webp" alt=""></div>
+                  <div class="pelicula">
+                    <img
+                      src="/img/categorias/comedia/MiSuegrameOdia.webp"
+                      alt=""
+                    />
+                  </div>
                 </div>
               </div>
             </div>
@@ -225,34 +230,22 @@
 
       <section>
         <h2>TERROR</h2>
-         <div class="mb-5">
+        <div class="mb-5">
           <div id="carouselTerror" class="carousel slide">
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <div class="contenedorpeliculas">
                   <div class="pelicula">
-                    <img
-                      src="/img/categorias/terror/elMono.jpeg"
-                      alt=""
-                    />
+                    <img src="/img/categorias/terror/elMono.jpeg" alt="" />
                   </div>
                   <div class="pelicula">
-                    <img
-                      src="/img/categorias/terror/Hablame.jpeg"
-                      alt=""
-                    />
+                    <img src="/img/categorias/terror/Hablame.jpeg" alt="" />
                   </div>
                   <div class="pelicula">
-                    <img
-                      src="/img/categorias/terror/It.jpeg"
-                      alt=""
-                    />
+                    <img src="/img/categorias/terror/It.jpeg" alt="" />
                   </div>
                   <div class="pelicula">
-                    <img
-                      src="/img/categorias/terror/Luciferina.jpeg"
-                      alt=""
-                    />
+                    <img src="/img/categorias/terror/Luciferina.jpeg" alt="" />
                   </div>
                   <div class="pelicula">
                     <img
@@ -261,10 +254,7 @@
                     />
                   </div>
                   <div class="pelicula">
-                    <img
-                      src="/img/categorias/terror/Ouija.jpeg"
-                      alt=""
-                    />
+                    <img src="/img/categorias/terror/Ouija.jpeg" alt="" />
                   </div>
                 </div>
               </div>
@@ -326,10 +316,7 @@
                     />
                   </div>
                   <div class="pelicula">
-                    <img
-                      src="/img/categorias/infantiles/Moana.jpeg"
-                      alt=""
-                    />
+                    <img src="/img/categorias/infantiles/Moana.jpeg" alt="" />
                   </div>
                   <div class="pelicula">
                     <img
@@ -338,10 +325,7 @@
                     />
                   </div>
                   <div class="pelicula">
-                    <img
-                      src="/img/categorias/infantiles/Up.jpeg"
-                      alt=""
-                    />
+                    <img src="/img/categorias/infantiles/Up.jpeg" alt="" />
                   </div>
                 </div>
               </div>
@@ -474,10 +458,7 @@
                     />
                   </div>
                   <div class="pelicula">
-                    <img
-                      src="/img/categorias/romanticas/CadaDia.jpeg"
-                      alt=""
-                    />
+                    <img src="/img/categorias/romanticas/CadaDia.jpeg" alt="" />
                   </div>
                   <div class="pelicula">
                     <img
@@ -532,7 +513,63 @@
       </section>
     </main>
 
-    <footer></footer>
+    <footer>
+      <div class="container-fluid mt-1">
+        <div class="row bg-secondary text-white">
+          <div class="col-xs-12 col-md-4 col-lg-3">
+            <p class="h5">Ubicacion</p>
+            <p>San Martin 345</p>
+            <p>S.M. de Tucuman</p>
+          </div>
+          <div class="col-xs-12 col-md-4 col-lg-3">
+            <p class="h5">Links</p>
+            <div class="mb-2">
+              <a class="text-white text-decoration-none" href="nosotros.html"
+                >Nosotros</a
+              >
+            </div>
+            <div class="mb-2">
+              <a class="text-white text-decoration-none" href="nosotros.html"
+                >Como llegar</a
+              >
+            </div>
+          </div>
+          <div class="col-xs-12 col-md-4 col-lg-3">
+            <p class="h5">Acceso</p>
+            <div class="mb-2">
+              <a class="text-white text-decoration-none" href="login.html"
+                >Login</a
+              >
+            </div>
+            <div class="mb-2">
+              <a class="text-white text-decoration-none" href="registro.html"
+                >Registrarse</a
+              >
+            </div>
+          </div>
+          <div class="col-xs-12 col-md-4 col-lg-3">
+            <p class="h5">Contacto</p>
+            <div class="redes-sociales">
+              <a href="#"><i class="fa-brands fa-instagram"></i></a>
+              <a href="#"><i class="fa-brands fa-twitter"></i></a>
+              <a href="#"><i class="fa-brands fa-facebook"></i></a>
+              <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+              <a href="#"><i class="fa-brands fa-tiktok"></i></a>
+            </div>
+            <div class="mb-2">
+              <a class="text-white text-decoration-none" href="formulario.html"
+                >Fomulario Contacto</a
+              >
+            </div>
+          </div>
+          <div class="col-xs-12">
+            <p class="text-white text-center">
+              Copyright - All right - Grupo 2
+            </p>
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <!--SCRIP BOOSTRAP-->
     <script
