estructura página Error 404

--- a/error404.html
+++ b/error404.html
@@ -7,11 +7,10 @@
     <link rel="shortcut icon" href="/img/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="/styles.css">
 </head>
-<body>
-
-    <footer>
-        <button class= "btnerror404" type="button"> Volver al Inicio</button>
-    </footer>
+<body class="bodyError404">
+<div class="containerError404">
+     <button class= "btnerror404" type="button"> Volver al Inicio</button>
+</div>
 
     
 </body>
