--- a/login.html
+++ b/login.html
@@ -9,8 +9,8 @@
     <!--FONT AWESOME-->
     <script src="https://kit.fontawesome.com/6d2d72b619.js" crossorigin="anonymous"></script>
 </head>
-<body>
-    <div class="container">
+<body class="bodyLogin">
+    <div class="containerLogin">
         <h1>Ingreso de Usuarios</h1>
         <form class="form-login">
             <div class="input-box">
