Modificaciones terminadas para página responsiva

--- a/error404.html
+++ b/error404.html
@@ -6,9 +6,17 @@
     <title>Error 404</title>
     <link rel="shortcut icon" href="/img/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="/styles.css">
+     <!--FONT AWESOME-->
+    <script src="https://kit.fontawesome.com/6d2d72b619.js" crossorigin="anonymous"></script>
 </head>
 <body class="bodyError404">
+
 <div class="containerError404">
+    <h1 class="titleError">ERROR 404</h1>
+    <i class="fa-solid fa-circle-exclamation"></i>
+    <div>
+        <p class="perror404">El recurso no se encuentra disponible en estos momentos</p>
+    </div>
      <button class= "btnerror404" type="button"> Volver al Inicio</button>
 </div>
 
