--- a/login.html
+++ b/login.html
@@ -14,12 +14,12 @@
         <h1>Ingreso de Usuarios</h1>
         <form class="form-login">
             <div class="input-box">
-                <input type="text" placeholder="E-mail / Usuario" required minlength="4" maxlength="35" pattern="[A-Za-z0-9_]{4,35}" title="Solo letras mayúsculas, minúsculas, números y guión bajo sin espacios">
+                <input type="text" placeholder="E-mail / Usuario" required minlength="4" maxlength="35" pattern="[A-Za-z0-9_]{4,35}" title="Debe incluir mínimo cuatro caracteres. Solo letras mayúsculas, minúsculas, números y guión bajo sin espacios">
                 <i class="fa-solid fa-user"></i>
             </div>
 
             <div class="input-box">
-                <input type="password" placeholder="Contraseña" required minlength="8" maxlength="12" pattern="[A-Za-z0-9]{8,12}" title="Solo letras mayúsculas, minúsculas, números, sin espacios">
+                <input type="password" placeholder="Contraseña" required minlength="8" maxlength="12" pattern="[A-Za-z0-9]{8,12}" title="Debe incluir mínimo ocho caracteres. Solo letras mayúsculas, minúsculas, números, sin espacios">
                 <i class="fa-solid fa-key"></i>
             </div>
 
