subiendo section categorias

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
   </div>
   <div class="carousel-inner text-white">
     <!--primer slider  d-->
-    <div class="carousel-item active ata-bs-interval="1000"" >
+    <div class="carousel-item active ata-bs-interval= "1000">
        <img src="/img/images/movies/blood-shot.jpg" class="d-block w-100 " alt="imagen 1">
                 <div class="carousel-caption top-0 mt-5  text-end  ">
                     <h5 class="text-h51">BLOOD</h5>
@@ -202,6 +202,16 @@
 </div>
 </section>
 
+<!-- categorias-->
+ <h1>CATEGORIAS</h1>
+      <section class="conteinerCategorias">
+        <a href="./categoria_ciencia_ficcion.html" class="categorias">CIENCIA FICCION</a>
+        <a href="./categoria_infantiles.html" class="categorias">INFANTILES</a>
+        <a href="" class="categorias">TERROR</a>
+        <a href="" class="categorias">COMEDIA</a>
+        <a href="" class="categorias">THRILLERS PSICOLOGICOS</a>
+        <a href="" class="categorias">ACCION</a>
+      </section>
 
      <!-- slider terciario-->
 <section class="slider3"></section>
