--- a/registro.html
+++ b/registro.html
@@ -12,14 +12,14 @@
 
       <form action="">
         <label for="plan">Selecciona tu plan</label>
-         <select name="plan" id="plan">
+         <select name="plan" id="plan" required>
           <option value="Basico">Basico</option>
           <option value="Estandar">Estandar</option>
           <option value="Premium">Premium</option>
          </select>
 
          <label for="nombre">Nombre</label>
-          <input type="text" id="nombre" name="nombre" required>
+          <input type="text" id="nombre" name="nombre" minlength="2" maxlength="30" required>
 
           <label for="apellido">Apellido</label>
            <input type="text" id="apellido" name="apellido" required>
@@ -28,7 +28,7 @@
             <input type="email" id="email" name="email" required>
 
             <label for="password">Contraseña</label>
-            <input type="password" id="password" name="password" required>
+            <input type="password" id="password" name="password" minlength="6" pattern="((?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{6,})" title="Debe tener al menos una letra y un numero,minimo 6 caracteres" required>
 
             <button type="submit">Crear cuenta</button>
       </form>
