--- a/index.html
+++ b/index.html
@@ -207,10 +207,10 @@
       <section class="conteinerCategorias">
         <a href="./categoria_ciencia_ficcion.html" class="categorias">CIENCIA FICCION</a>
         <a href="./categoria_infantiles.html" class="categorias">INFANTILES</a>
-        <a href="" class="categorias">TERROR</a>
-        <a href="" class="categorias">COMEDIA</a>
-        <a href="" class="categorias">THRILLERS PSICOLOGICOS</a>
-        <a href="" class="categorias">ACCION</a>
+        <a href="./error404.html" class="categorias">TERROR</a>
+        <a href="./error404.html" class="categorias">COMEDIA</a>
+        <a href="./error404.html" class="categorias">THRILLERS PSICOLOGICOS</a>
+        <a href="./error404.html" class="categorias">ACCION</a>
       </section>
 
      <!-- slider terciario-->
