--- a/categoria_ciencia_ficcion.html
+++ b/categoria_ciencia_ficcion.html
@@ -77,7 +77,7 @@
     <main class="pb-5">
       <section class="bannerCsFiccion">
         <h1>AVATAR</h1>
-        <button class="botonVerMas">Ver pelicula</button>
+        <a href="./error404.html" class="botonVerMas">Ver pelicula</a>
       </section>
 
       <section>
