--- a/categoria_infantiles.html
+++ b/categoria_infantiles.html
@@ -77,7 +77,7 @@
     <main class="pb-5">
       <section class="banner">
         <h1>ELIO</h1>
-        <button class="botonVerMas">Ver pelicula</button>
+        <a href="./error404.html" class="botonVerMas">Ver pelicula</a>
       </section>
 
       <section>
