--- a/contacto.html
+++ b/contacto.html
@@ -45,7 +45,7 @@
         </div>
 
         <div class="text-center ">
-            <button type="submit" class="btn btn-primary px-4">
+            <button type="submit" class="btn px-4 boton">
                 <a href="" class="text-decoration-none text-light">
                     Enviar consulta
                 </a>
