modificacion del index

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <!-- slider principal-->
 <section class="carrousel">
 <div class="container">
-    <H4>ESTRENOS !!!</H4>
+    <H4 class="tituloDesCaRec">ESTRENOS</H4>
     <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -203,7 +203,7 @@
 </section>
 
 <!-- categorias-->
- <h1>CATEGORIAS</h1>
+ <h1 class="tituloDesCaRec">CATEGORIAS</h1>
       <section class="conteinerCategorias">
         <a href="./categoria_ciencia_ficcion.html" class="categorias">CIENCIA FICCION</a>
         <a href="./categoria_infantiles.html" class="categorias">INFANTILES</a>
@@ -213,9 +213,351 @@
         <a href="./error404.html" class="categorias">ACCION</a>
       </section>
 
+       <!-- carrusel de recomendadas-->
+<section>
+        <h2 class="tituloDesCaRec">PELICULAS Y SERIES DESTACADAS</h2>
+        <div class="mb-1">
+          <div id="carouselExample" class="carousel slide">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <div class="contenedorpeliculas">
+                  <a href="./error404.html" class="pelicula">
+                    <img
+                      src="/img/categorias/ciencia_ficcion/Avatar.jpeg"
+                      alt=""
+                    />
+                  </a>
+                  <a href="./error404.html" class="pelicula">
+                    <img
+                      src="/img/categorias/ciencia_ficcion/axl.jpeg"
+                      alt=""
+                    />
+                  </a>
+                  <a href="./error404.html" class="pelicula">
+                    <img
+                      src="/img/categorias/ciencia_ficcion/capitanamerica.jpeg"
+                      alt=""
+                    />
+                  </a>
+                  <a href="./error404.html" class="pelicula">
+                    <img
+                      src="/img/categorias/ciencia_ficcion/cazafantasmas.jpeg"
+                      alt=""
+                    />
+                  </a>
+                  <a href="./error404.html" class="pelicula">
+                    <img
+                      src="/img/categorias/ciencia_ficcion/dragonheart.jpeg"
+                      alt=""
+                    />
+                  </a>
+                  <a href="./error404.html" class="pelicula">
+                    <img
+                      src="/img/categorias/ciencia_ficcion/godzilla.jpeg"
+                      alt=""
+                    />
+                  </a>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="contenedorpeliculas">
+                  <a href="./error404.html" class="pelicula">
+                    <img
+                      src="/img/categorias/ciencia_ficcion/GuardianesdeLaGalaxia.jpeg"
+                      alt=""
+                    />
+                  </a>
+                  <a href="./error404.html" class="pelicula">
+                    <img
+                      src="/img/categorias/ciencia_ficcion/Interestelar.jpeg"
+                      alt=""
+                    />
+                  </a>
+                  <a href="./error404.html" class="pelicula">
+                    <img
+                      src="/img/categorias/ciencia_ficcion/intothewoods.jpeg"
+                      alt=""
+                    />
+                  </a>
+                  <a href="./error404.html" class="pelicula">
+                    <img
+                      src="/img/categorias/ciencia_ficcion/jumanjienlaselva.jpeg"
+                      alt=""
+                    />
+                  </a>
+                  <a href="./error404.html" class="pelicula">
+                    <img
+                      src="/img/categorias/ciencia_ficcion/matrix.jpeg"
+                      alt=""
+                    />
+                  </a>
+                  <a href="./error404.html" class="pelicula">
+                    <img
+                      src="/img/categorias/ciencia_ficcion/mythica.jpeg"
+                      alt=""
+                    />
+                  </a>
+                </div>
+              </div>
+            </div>
+            <button
+              class="carousel-control-prev"
+              type="button"
+              data-bs-target="#carouselExample"
+              data-bs-slide="prev"
+            >
+              <span
+                class="carousel-control-prev-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button
+              class="carousel-control-next"
+              type="button"
+              data-bs-target="#carouselExample"
+              data-bs-slide="next"
+            >
+              <span
+                class="carousel-control-next-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        </div>
+      </section>
+
+     <section>
+        <div class="mb-1">
+          <div id="carouselExample" class="carousel slide">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <div class="contenedorpeliculas">
+                  <a href="./error404.html" class="pelicula">
+                    <img
+                      src="/img/categorias/ciencia_ficcion/Avatar.jpeg"
+                      alt=""
+                    />
+                  </a>
+                  <a href="./error404.html" class="pelicula">
+                    <img
+                      src="/img/categorias/ciencia_ficcion/axl.jpeg"
+                      alt=""
+                    />
+                  </a>
+                  <a href="./error404.html" class="pelicula">
+                    <img
+                      src="/img/categorias/ciencia_ficcion/capitanamerica.jpeg"
+                      alt=""
+                    />
+                  </a>
+                  <a href="./error404.html" class="pelicula">
+                    <img
+                      src="/img/categorias/ciencia_ficcion/cazafantasmas.jpeg"
+                      alt=""
+                    />
+                  </a>
+                  <a href="./error404.html" class="pelicula">
+                    <img
+                      src="/img/categorias/ciencia_ficcion/dragonheart.jpeg"
+                      alt=""
+                    />
+                  </a>
+                  <a href="./error404.html" class="pelicula">
+                    <img
+                      src="/img/categorias/ciencia_ficcion/godzilla.jpeg"
+                      alt=""
+                    />
+                  </a>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="contenedorpeliculas">
+                  <a href="./error404.html" class="pelicula">
+                    <img
+                      src="/img/categorias/ciencia_ficcion/GuardianesdeLaGalaxia.jpeg"
+                      alt=""
+                    />
+                  </a>
+                  <a href="./error404.html" class="pelicula">
+                    <img
+                      src="/img/categorias/ciencia_ficcion/Interestelar.jpeg"
+                      alt=""
+                    />
+                  </a>
+                  <a href="./error404.html" class="pelicula">
+                    <img
+                      src="/img/categorias/ciencia_ficcion/intothewoods.jpeg"
+                      alt=""
+                    />
+                  </a>
+                  <a href="./error404.html" class="pelicula">
+                    <img
+                      src="/img/categorias/ciencia_ficcion/jumanjienlaselva.jpeg"
+                      alt=""
+                    />
+                  </a>
+                  <a href="./error404.html" class="pelicula">
+                    <img
+                      src="/img/categorias/ciencia_ficcion/matrix.jpeg"
+                      alt=""
+                    />
+                  </a>
+                  <a href="./error404.html" class="pelicula">
+                    <img
+                      src="/img/categorias/ciencia_ficcion/mythica.jpeg"
+                      alt=""
+                    />
+                  </a>
+                </div>
+              </div>
+            </div>
+            <button
+              class="carousel-control-prev"
+              type="button"
+              data-bs-target="#carouselExample"
+              data-bs-slide="prev"
+            >
+              <span
+                class="carousel-control-prev-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button
+              class="carousel-control-next"
+              type="button"
+              data-bs-target="#carouselExample"
+              data-bs-slide="next"
+            >
+              <span
+                class="carousel-control-next-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        </div>
+      </section> 
+
+       <section>
+        <div class="mb-1">
+          <div id="carouselExample" class="carousel slide">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <div class="contenedorpeliculas">
+                  <a href="./error404.html" class="pelicula">
+                    <img
+                      src="/img/categorias/ciencia_ficcion/Avatar.jpeg"
+                      alt=""
+                    />
+                  </a>
+                  <a href="./error404.html" class="pelicula">
+                    <img
+                      src="/img/categorias/ciencia_ficcion/axl.jpeg"
+                      alt=""
+                    />
+                  </a>
+                  <a href="./error404.html" class="pelicula">
+                    <img
+                      src="/img/categorias/ciencia_ficcion/capitanamerica.jpeg"
+                      alt=""
+                    />
+                  </a>
+                  <a href="./error404.html" class="pelicula">
+                    <img
+                      src="/img/categorias/ciencia_ficcion/cazafantasmas.jpeg"
+                      alt=""
+                    />
+                  </a>
+                  <a href="./error404.html" class="pelicula">
+                    <img
+                      src="/img/categorias/ciencia_ficcion/dragonheart.jpeg"
+                      alt=""
+                    />
+                  </a>
+                  <a href="./error404.html" class="pelicula">
+                    <img
+                      src="/img/categorias/ciencia_ficcion/godzilla.jpeg"
+                      alt=""
+                    />
+                  </a>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="contenedorpeliculas">
+                  <a href="./error404.html" class="pelicula">
+                    <img
+                      src="/img/categorias/ciencia_ficcion/GuardianesdeLaGalaxia.jpeg"
+                      alt=""
+                    />
+                  </a>
+                  <a href="./error404.html" class="pelicula">
+                    <img
+                      src="/img/categorias/ciencia_ficcion/Interestelar.jpeg"
+                      alt=""
+                    />
+                  </a>
+                  <a href="./error404.html" class="pelicula">
+                    <img
+                      src="/img/categorias/ciencia_ficcion/intothewoods.jpeg"
+                      alt=""
+                    />
+                  </a>
+                  <a href="./error404.html" class="pelicula">
+                    <img
+                      src="/img/categorias/ciencia_ficcion/jumanjienlaselva.jpeg"
+                      alt=""
+                    />
+                  </a>
+                  <a href="./error404.html" class="pelicula">
+                    <img
+                      src="/img/categorias/ciencia_ficcion/matrix.jpeg"
+                      alt=""
+                    />
+                  </a>
+                  <a href="./error404.html" class="pelicula">
+                    <img
+                      src="/img/categorias/ciencia_ficcion/mythica.jpeg"
+                      alt=""
+                    />
+                  </a>
+                </div>
+              </div>
+            </div>
+            <button
+              class="carousel-control-prev"
+              type="button"
+              data-bs-target="#carouselExample"
+              data-bs-slide="prev"
+            >
+              <span
+                class="carousel-control-prev-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button
+              class="carousel-control-next"
+              type="button"
+              data-bs-target="#carouselExample"
+              data-bs-slide="next"
+            >
+              <span
+                class="carousel-control-next-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        </div>
+      </section>
+      
+
      <!-- slider terciario-->
 <section class="slider3"></section>
-<h3>Recomendadas para Ti !!</h3>
+<h3 class="tituloDesCaRec">RECOMENDADAS PARA TI</h3>
 
 <div class="gallery-container">
     <div class="gallery__item">
