subiendo pagina de serie

--- a/categoria_infantiles.html
+++ b/categoria_infantiles.html
@@ -93,15 +93,15 @@
                       alt=""
                     />
                   </a>
-                  <a href="./error404.html" class="pelicula">
+                  <a href="./pelicula.html" class="pelicula">
                     <img
                       src="/img/categorias/infantiles/IntensaMente2.jpeg"
                       alt=""
                     />
                   </a>
-                  <a href="./error404.html" class="pelicula">
+                  <a href="./serie.html" class="pelicula">
                     <img
-                      src="/img/categorias/infantiles/LosCroods.jpeg"
+                      src="/img/categorias/infantiles/Bluey_29.webp"
                       alt=""
                     />
                   </a>
