modifique contacto.html con clases en español y boton que lleva a 404

--- a/contacto.html
+++ b/contacto.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div class="container my-5">
-    <div class="contact-card">
+    <div class="tarjeta-contacto">
       <h2 class="text-center mb-2 fw-bold">
         Contacto
     </h2>
@@ -29,24 +29,24 @@
         <!-- Nombre -->
         <div class="input-group mb-3">
           <span class="input-group-text"><i class="fas fa-user"></i></span>
-          <input type="text" class="form-control" placeholder="Nombre" required />
+          <input type="text" class="form-control campo-input" placeholder="Nombre" required />
         </div>
 
         <!-- Correo -->
         <div class="input-group mb-3">
           <span class="input-group-text"><i class="fas fa-envelope"></i></span>
-          <input type="email" class="form-control" placeholder="Correo electrónico" required />
+          <input type="email" class="form-control campo-input" placeholder="Correo electrónico" required />
         </div>
 
         <!-- Mensaje -->
         <div class="input-group mb-4">
           <span class="input-group-text"><i class="fas fa-comment-dots align-self-start"></i></span>
-          <textarea class="form-control" placeholder="Mensaje" rows="4" required></textarea>
+          <textarea class="form-control campo-input" placeholder="Mensaje" rows="4" required></textarea>
         </div>
 
         <div class="text-center ">
             <button type="submit" class="btn px-4 boton">
-                <a href="" class="text-decoration-none text-light">
+                <a href="/error404.html" class="text-decoration-none text-light">
                     Enviar consulta
                 </a>
             </button>
