--- a/contacto.html
+++ b/contacto.html
@@ -28,24 +28,24 @@
       <form>
         <!-- Nombre -->
         <div class="input-group mb-3">
-          <span class="input-group-text"><i class="fas fa-user"></i></span>
+          <span class="input-group-text icono-formulario"><i class="fas fa-user"></i></span>
           <input type="text" class="form-control campo-input" placeholder="Nombre" required />
         </div>
 
         <!-- Correo -->
         <div class="input-group mb-3">
-          <span class="input-group-text"><i class="fas fa-envelope"></i></span>
+          <span class="input-group-text icono-formulario"><i class="fas fa-envelope"></i></span>
           <input type="email" class="form-control campo-input" placeholder="Correo electrónico" required />
         </div>
 
         <!-- Mensaje -->
         <div class="input-group mb-4">
-          <span class="input-group-text"><i class="fas fa-comment-dots align-self-start"></i></span>
+          <span class="input-group-text icono-formulario"><i class="fas fa-comment-dots align-self-start"></i></span>
           <textarea class="form-control campo-input" placeholder="Mensaje" rows="4" required></textarea>
         </div>
 
         <div class="text-center ">
-            <button type="submit" class="btn px-4 boton">
+            <button type="submit" class="btn px-4 boton-enviar">
                 <a href="/error404.html" class="text-decoration-none text-light">
                     Enviar consulta
                 </a>
