--- a/contacto.html
+++ b/contacto.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,12 +9,13 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   <link rel="stylesheet" href="styles/contacto.css" />
 </head>
+
 <body>
   <div class="container my-5">
     <div class="tarjeta-contacto">
       <h2 class="text-center mb-2 fw-bold">
         Contacto
-    </h2>
+      </h2>
       <p class="text-center text-muted mb-4">¿Tenés alguna duda o sugerencia? ¡Escribinos!</p>
 
       <!-- Dirección -->
@@ -45,11 +47,8 @@
         </div>
 
         <div class="text-center ">
-            <button type="submit" class="btn px-4 boton-enviar">
-                <a href="/error404.html" class="text-decoration-none text-light">
-                    Enviar consulta
-                </a>
-            </button>
+          <button type="submit" class="btn px-4 boton-enviar"> Enviar consulta
+             </button>
         </div>
       </form>
     </div>
@@ -57,4 +56,5 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
