listo modifi index

--- a/error404.html
+++ b/error404.html
@@ -17,7 +17,9 @@
     <div>
         <p class="perror404">El recurso no se encuentra disponible en estos momentos</p>
     </div>
+    <a href="index.html">
      <button class= "btnerror404" type="button"> Volver al Inicio</button>
+     </a>
 </div>
 
     
