arreglo de navbar

--- a/categoria_ciencia_ficcion.html
+++ b/categoria_ciencia_ficcion.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="/styles/categorias.css" />
   </head>
   <body>
-    <head>
+    <header>
         <!-- Seccion navbar-->
         <section class=" sticky-top">
 
@@ -55,7 +55,7 @@
             
         </section>
         
-    </head>
+    </header>
 
     <main class="pb-5">
       <section class="bannerCsFiccion">
