--- a/nosotros.html
+++ b/nosotros.html
@@ -43,21 +43,11 @@
                             <li class="nav-item">
                             <a class="nav-link" href="registro.html">Registro</a>
                             </li>
-                            <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Categoria
-                            </a>
-                                <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="#">Peliculas de Accion</a></li>
-                                    <li><a class="dropdown-item" href="#">Series</a></li>
-                                    <li><a class="dropdown-item" href="#">Comedias</a></li>
-                                    <li><hr class="dropdown-divider"></li>
-                                    <li><a class="dropdown-item" href="#">Infantiles</a></li>
-                                </ul>
+                            
                         
                         </ul>
                             <form class="d-flex" role="search">
-                                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                                <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
                             <button class="btn btn-outline-danger" type="submit">Buscar</butto>
                             </form>
                     </div>
