--- a/contacto.html
+++ b/contacto.html
@@ -31,19 +31,24 @@
         <!-- Nombre -->
         <div class="input-group mb-3">
           <span class="input-group-text icono-formulario"><i class="fas fa-user"></i></span>
-          <input type="text" class="form-control campo-input" placeholder="Nombre" required />
+          <input type="text" name="nombre" class="form-control campo-input" placeholder="Nombre" required 
+          pattern="[A-Za-zÁÉÍÓÚáéíóúÑñ\s]+" 
+            title="Solo letras y espacios"/>
         </div>
 
         <!-- Correo -->
         <div class="input-group mb-3">
           <span class="input-group-text icono-formulario"><i class="fas fa-envelope"></i></span>
-          <input type="email" class="form-control campo-input" placeholder="Correo electrónico" required />
+          <input type="email" name="correo" class="form-control campo-input" placeholder="Correo electrónico" required 
+          title="Ingrese un correo valido como ejemplo@correo.com"/>
         </div>
 
         <!-- Mensaje -->
         <div class="input-group mb-4">
           <span class="input-group-text icono-formulario"><i class="fas fa-comment-dots align-self-start"></i></span>
-          <textarea class="form-control campo-input" placeholder="Mensaje" rows="4" required></textarea>
+          <textarea name="mensaje" class="form-control campo-input" placeholder="Mensaje" rows="4" required
+          minlength="10"
+          title="el mensaje debe tener al menos 10 caracteres"></textarea>
         </div>
 
         <div class="text-center ">
