--- a/contacto.html
+++ b/contacto.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+  <div class="fondo-contacto">
   <div class="container my-5">
     <div class="tarjeta-contacto">
       <h2 class="text-center mb-2 fw-bold">
@@ -29,26 +30,35 @@
       <!-- Formulario -->
       <form>
         <!-- Nombre -->
-        <div class="input-group mb-3">
+        <div class="mb-3">
+          <label for="nombre" class="form-label text-white">Nombre</label>
+          <div class="input-group">
           <span class="input-group-text icono-formulario"><i class="fas fa-user"></i></span>
-          <input type="text" name="nombre" class="form-control campo-input" placeholder="Nombre" required 
+          <input type="text" name="nombre" id="nombre" class="form-control campo-input" placeholder="Nombre" required 
           pattern="[A-Za-zÁÉÍÓÚáéíóúÑñ\s]+" 
             title="Solo letras y espacios"/>
+          </div>
         </div>
 
         <!-- Correo -->
-        <div class="input-group mb-3">
+        <div class="mb-3">
+          <label for="correo" class="form-label text-white">Correo electronico</label>
+          <div class="input-group">
           <span class="input-group-text icono-formulario"><i class="fas fa-envelope"></i></span>
-          <input type="email" name="correo" class="form-control campo-input" placeholder="Correo electrónico" required 
+          <input type="email" name="correo" id="correo" class="form-control campo-input" placeholder="Correo electrónico" required 
           title="Ingrese un correo valido como ejemplo@correo.com"/>
+        </div>
         </div>
 
         <!-- Mensaje -->
-        <div class="input-group mb-4">
+        <div class="mb-4">
+          <label for="mensaje" class="form-label text-white">Mensaje</label>
+          <div class="input-group">
           <span class="input-group-text icono-formulario"><i class="fas fa-comment-dots align-self-start"></i></span>
-          <textarea name="mensaje" class="form-control campo-input" placeholder="Mensaje" rows="4" required
+          <textarea name="mensaje" id="mensaje" class="form-control campo-input" placeholder="Escribi tu mensaje" rows="4" required
           minlength="10"
           title="el mensaje debe tener al menos 10 caracteres"></textarea>
+        </div>
         </div>
 
         <div class="text-center ">
@@ -58,7 +68,7 @@
       </form>
     </div>
   </div>
-
+</div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
