actualizacion de estilos de paginas error404 y login

--- a/error404.html
+++ b/error404.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Error 404</title>
     <link rel="shortcut icon" href="/img/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="/styles/error404.css">
      <!--FONT AWESOME-->
     <script src="https://kit.fontawesome.com/6d2d72b619.js" crossorigin="anonymous"></script>
 </head>
