--- a/categoria_infantiles.html
+++ b/categoria_infantiles.html
@@ -13,12 +13,13 @@
     />
     <!--styles---->
     <link rel="stylesheet" href="/styles/categorias.css" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
   <body>
     <header>
       <!-- Seccion navbar-->
       <section class="sticky-top">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-primary p-3 mb-2">
+        <nav class="navbar navbar-expand-lg navbar-dark p-3">
           <div class="container-fluid">
             <img
               src="img/g2.jpg"
@@ -53,9 +54,6 @@
                 <li class="nav-item">
                   <a class="nav-link" href="registro.html">Registro</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link textoblanco" href="#"> Categoria </a>
-                </li>
               </ul>
               <form class="d-flex" role="search">
                 <input
@@ -64,9 +62,7 @@
                   placeholder="Search"
                   aria-label="Search"
                 />
-                <button class="btn btn-outline-danger" type="submit">
-                  Buscar
-                </button>
+                <button class="btn btn-secondary" type="submit">Buscar</button>
               </form>
             </div>
           </div>
@@ -80,7 +76,7 @@
         <a href="./error404.html" class="botonVerMas">Ver pelicula</a>
       </section>
 
-      <section>
+      <section data-aos="fade-up">
         <h2>INFANTILES</h2>
         <div class="mb-5">
           <div id="carouselExample" class="carousel slide">
@@ -152,7 +148,8 @@
               </div>
             </div>
             <button
-              class="carousel-control-prev"
+              class="carousel-control-prev bg-dark rounded-circle my-auto mx-2 text-white"
+              style="width: 60px; height: 60px"
               type="button"
               data-bs-target="#carouselExample"
               data-bs-slide="prev"
@@ -164,7 +161,8 @@
               <span class="visually-hidden">Previous</span>
             </button>
             <button
-              class="carousel-control-next"
+              class="carousel-control-next bg-dark rounded-circle my-auto mx-2 text-white"
+              style="width: 60px; height: 60px"
               type="button"
               data-bs-target="#carouselExample"
               data-bs-slide="next"
@@ -179,7 +177,7 @@
         </div>
       </section>
 
-      <section>
+      <section data-aos="fade-up">
         <div class="">
           <div id="carouselCienciaFiccion" class="carousel slide">
             <div class="carousel-inner">
@@ -257,7 +255,8 @@
               </div>
             </div>
             <button
-              class="carousel-control-prev"
+              class="carousel-control-prev bg-dark rounded-circle my-auto mx-2 text-white"
+              style="width: 60px; height: 60px"
               type="button"
               data-bs-target="#carouselCienciaFiccion"
               data-bs-slide="prev"
@@ -269,7 +268,8 @@
               <span class="visually-hidden">Previous</span>
             </button>
             <button
-              class="carousel-control-next"
+              class="carousel-control-next bg-dark rounded-circle my-auto mx-2 text-white"
+              style="width: 60px; height: 60px"
               type="button"
               data-bs-target="#carouselCienciaFiccion"
               data-bs-slide="next"
@@ -287,7 +287,7 @@
 
     <footer>
       <div class="container-fluid mt-1">
-        <div class="row bg-secondary text-white">
+        <div class="row text-white">
           <div class="col-xs-12 col-md-4 col-lg-3">
             <p class="h5">Ubicacion</p>
             <p>San Martin 345</p>
