--- a/pelicula.html
+++ b/pelicula.html
@@ -12,13 +12,14 @@
       crossorigin="anonymous"
     />
     <!--styles---->
-    <link rel="stylesheet" href="/styles/pelicula.css" />
+    <link rel="stylesheet" href="/styles/serie.css" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
   <body>
     <header>
       <!-- Seccion navbar-->
       <section class="sticky-top">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-primary p-3 mb-2">
+        <nav class="navbar navbar-expand-lg navbar-dark p-3">
           <div class="container-fluid">
             <img
               src="img/g2.jpg"
@@ -53,9 +54,6 @@
                 <li class="nav-item">
                   <a class="nav-link" href="registro.html">Registro</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link textoblanco" href="#"> Categoria </a>
-                </li>
               </ul>
               <form class="d-flex" role="search">
                 <input
@@ -64,11 +62,209 @@
                   placeholder="Search"
                   aria-label="Search"
                 />
-                <button class="btn btn-outline-danger" type="submit">
-                  Buscar
-                </button>
+                <button class="btn btn-secondary" type="submit">Buscar</button>
               </form>
             </div>
           </div>
         </nav>
       </section>
+    </header>
+    <main class="pb-5">
+      <section class="bluey">
+        <video
+          src="/img/categorias/intensamente2.mp4"
+          class="videobluey"
+          autoplay
+        ></video>
+        <div class="descbluey">
+          <h1 class="tituloBluey">INTENSA-MENTE 2</h1>
+          <h2 class="Familiar">Australia, Reino Unido | 2018 | Familiar</h2>
+          <a href="./error404.html" class="botonVerMas">Reproducir</a>
+        </div>
+      </section>
+
+      <section>
+        <p class="Descripcion">
+          La secuela regresa a la mente de la adolescente Riley, justo cuando la
+          sede central está sufriendo una repentina demolición para dejar
+          espacio a algo completamente inesperado: ¡nuevas emociones! Alegría,
+          Tristeza, Furia, Temor y Desagrado, que llevan mucho tiempo dirigiendo
+          una operación exitosa en todos los sentidos, no están seguras de cómo
+          sentirse cuando aparece Ansiedad. Y parece que no está sola…
+        </p>
+      </section>
+      <h2 class="Familiar">PELICULAS RECOMENDADAS</h2>
+      <section>
+        <div class="">
+          <div id="carouselPeli" class="carousel slide">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <div class="contenedorpeliculas">
+                  <a href="./error404.html" class="pelicula">
+                    <img
+                      src="/img/categorias/infantiles/robinhood.jpeg"
+                      alt=""
+                    />
+                  </a>
+                  <a href="./error404.html" class="pelicula">
+                    <img src="/img/categorias/infantiles/aladin.jpeg" alt="" />
+                  </a>
+                  <a href="./error404.html" class="pelicula">
+                    <img
+                      src="/img/categorias/infantiles/BuscandoaNemo.jpeg"
+                      alt=""
+                    />
+                  </a>
+                  <a href="./error404.html" class="pelicula">
+                    <img
+                      src="/img/categorias/infantiles/campanitahadasypiratas.jpeg"
+                      alt=""
+                    />
+                  </a>
+                  <a href="./error404.html" class="pelicula">
+                    <img src="/img/categorias/infantiles/coco.jpeg" alt="" />
+                  </a>
+                  <a href="./error404.html" class="pelicula">
+                    <img
+                      src="/img/categorias/infantiles/enredados.jpeg"
+                      alt=""
+                    />
+                  </a>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="contenedorpeliculas">
+                  <img
+                    src="/img/categorias/infantiles/losincreibles.jpeg"
+                    class="pelicula"
+                    alt="..."
+                  />
+
+                  <img
+                    src="/img/categorias/infantiles/hortonenelmundodelosquien.jpeg"
+                    class="pelicula"
+                    alt=""
+                  />
+                  <img
+                    src="/img/categorias/infantiles/ladamayelvagabundo.jpeg"
+                    class="pelicula"
+                    alt=""
+                  />
+                  <img
+                    src="/img/categorias/infantiles/Moana.jpeg"
+                    class="pelicula"
+                    alt=""
+                  />
+                  <img
+                    src="/img/categorias/infantiles/monstersinc.jpeg"
+                    class="pelicula"
+                    alt=""
+                  />
+                  <img
+                    src="/img/categorias/infantiles/robotsalvaje.jpeg"
+                    class="pelicula"
+                    alt=""
+                  />
+                </div>
+              </div>
+            </div>
+            <button
+              class="carousel-control-prev bg-dark rounded-circle my-auto mx-2 text-white"
+              style="width: 60px; height: 60px"
+              type="button"
+              data-bs-target="#carouselPeli"
+              data-bs-slide="prev"
+            >
+              <span
+                class="carousel-control-prev-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button
+              class="carousel-control-next bg-dark rounded-circle my-auto mx-2 text-white"
+              style="width: 60px; height: 60px"
+              type="button"
+              data-bs-target="#carouselPeli"
+              data-bs-slide="next"
+            >
+              <span
+                class="carousel-control-next-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <div class="container-fluid mt-1">
+        <div class="row text-white">
+          <div class="col-xs-12 col-md-4 col-lg-3">
+            <p class="h5">Ubicacion</p>
+            <p>San Martin 345</p>
+            <p>S.M. de Tucuman</p>
+          </div>
+          <div class="col-xs-12 col-md-4 col-lg-3">
+            <p class="h5">Links</p>
+            <div class="mb-2">
+              <a class="text-white text-decoration-none" href="nosotros.html"
+                >Nosotros</a
+              >
+            </div>
+            <div class="mb-2">
+              <a class="text-white text-decoration-none" href="nosotros.html"
+                >Como llegar</a
+              >
+            </div>
+          </div>
+          <div class="col-xs-12 col-md-4 col-lg-3">
+            <p class="h5">Acceso</p>
+            <div class="mb-2">
+              <a class="text-white text-decoration-none" href="login.html"
+                >Login</a
+              >
+            </div>
+            <div class="mb-2">
+              <a class="text-white text-decoration-none" href="registro.html"
+                >Registrarse</a
+              >
+            </div>
+          </div>
+          <div class="col-xs-12 col-md-4 col-lg-3">
+            <p class="h5">Contacto</p>
+            <div class="redes-sociales">
+              <a href="#"><i class="fa-brands fa-instagram"></i></a>
+              <a href="#"><i class="fa-brands fa-twitter"></i></a>
+              <a href="#"><i class="fa-brands fa-facebook"></i></a>
+              <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+              <a href="#"><i class="fa-brands fa-tiktok"></i></a>
+            </div>
+            <div class="mb-2">
+              <a class="text-white text-decoration-none" href="formulario.html"
+                >Fomulario Contacto</a
+              >
+            </div>
+          </div>
+          <div class="col-xs-12">
+            <p class="text-white text-center">
+              Copyright - All right - Grupo 2
+            </p>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!--SCRIP BOOSTRAP-->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+      crossorigin="anonymous"
+    ></script>
+    <!--SCRIP E INICIALIZACION DE AOS ANIMATE-->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
+  </body>
+</html>
