--- a/serie.html
+++ b/serie.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ciencia Ficcion</title>
+    <title>Bluey</title>
     <!-- Link BOOSTRAP-->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
@@ -13,12 +13,13 @@
     />
     <!--styles---->
     <link rel="stylesheet" href="/styles/serie.css" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
   <body>
     <header>
       <!-- Seccion navbar-->
       <section class="sticky-top">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-primary p-3 mb-2">
+        <nav class="navbar navbar-expand-lg navbar-dark p-3">
           <div class="container-fluid">
             <img
               src="img/g2.jpg"
@@ -53,9 +54,6 @@
                 <li class="nav-item">
                   <a class="nav-link" href="registro.html">Registro</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link textoblanco" href="#"> Categoria </a>
-                </li>
               </ul>
               <form class="d-flex" role="search">
                 <input
@@ -64,9 +62,7 @@
                   placeholder="Search"
                   aria-label="Search"
                 />
-                <button class="btn btn-outline-danger" type="submit">
-                  Buscar
-                </button>
+                <button class="btn btn-secondary" type="submit">Buscar</button>
               </form>
             </div>
           </div>
@@ -82,34 +78,210 @@
         ></video>
         <div class="descbluey">
           <h1 class="tituloBluey">BLUEY T1</h1>
-          <h2 class="Familiar"> Australia, Reino Unido | 2018 | Familiar </h2>
+          <h2 class="Familiar">Australia, Reino Unido | 2018 | Familiar</h2>
           <a href="./error404.html" class="botonVerMas">Reproducir: Cap 1</a>
         </div>
       </section>
 
-       <section class="conteinerCap">
-        <a href="./error404.html" class="capitulo">Cap 1</a>
-        <a href="./error404.html" class="capitulo">Cap 2</a>
-        <a href="./error404.html" class="capitulo">Cap 3</a>
-        <a href="./error404.html" class="capitulo">Cap 4</a>
-        <a href="./error404.html" class="capitulo">Cap 5</a>
-        <a href="./error404.html" class="capitulo">Cap 6</a>
-        <a href="./error404.html" class="capitulo">Cap 7</a>
-        <a href="./error404.html" class="capitulo">Cap 8</a>
-        <a href="./error404.html" class="capitulo">Cap 9</a>
-        <a href="./error404.html" class="capitulo">Cap 10</a>
-        <a href="./error404.html" class="capitulo">Cap 11</a>
-        <a href="./error404.html" class="capitulo">Cap 12</a>
+      <section class="conteinerCap">
+        <a href="./error404.html" class="capitulo"><span>Cap</span> 1</a>
+        <a href="./error404.html" class="capitulo"><span>Cap</span> 2</a>
+        <a href="./error404.html" class="capitulo"><span>Cap</span> 3</a>
+        <a href="./error404.html" class="capitulo"><span>Cap</span> 4</a>
+        <a href="./error404.html" class="capitulo"><span>Cap</span> 5</a>
+        <a href="./error404.html" class="capitulo"><span>Cap</span> 6</a>
+        <a href="./error404.html" class="capitulo"><span>Cap</span> 7</a>
+        <a href="./error404.html" class="capitulo"><span>Cap</span> 8</a>
+        <a href="./error404.html" class="capitulo"><span>Cap</span> 9</a>
+        <a href="./error404.html" class="capitulo"><span>Cap</span> 10</a>
+        <a href="./error404.html" class="capitulo"><span>Cap</span> 11</a>
+        <a href="./error404.html" class="capitulo"><span>Cap</span> 12</a>
       </section>
 
-       <section>
-          <p class="Descripcion">
-            Una cachorrita de Blue Heeler de seis años que se caracteriza por su
-            abundancia de energía, imaginación y curiosidad por el mundo. Ella
-            vive con su padre Bandit, su madre Chilli y su hermana menor Bingo,
-            con quien comparte aventuras en mundos imaginarios.
-          </p>
-        </section>
+      <section>
+        <p class="Descripcion">
+          Una cachorrita de Blue Heeler de seis años que se caracteriza por su
+          abundancia de energía, imaginación y curiosidad por el mundo. Ella
+          vive con su padre Bandit, su madre Chilli y su hermana menor Bingo,
+          con quien comparte aventuras en mundos imaginarios.
+        </p>
+      </section>
+
+      <h2 class="Familiar">SERIES RECOMENDADAS</h2>
+      <section>
+        <div class="">
+          <div id="carouselSerie" class="carousel slide">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <div class="contenedorpeliculas">
+                  <a href="./error404.html" class="pelicula">
+                    <img src="/img/categorias/infantiles/blue1.jpeg" alt="" />
+                  </a>
+                  <a href="./error404.html" class="pelicula">
+                    <img
+                      src="/img/categorias/infantiles/bluey1.jpeg"
+                      alt=""
+                    />
+                  </a>
+                  <a href="./error404.html" class="pelicula">
+                    <img
+                      src="/img/categorias/infantiles/caillou1.jpeg"
+                      alt=""
+                    />
+                  </a>
+                  <a href="./error404.html" class="pelicula">
+                    <img
+                      src="/img/categorias/infantiles/pocoyo1.jpeg"
+                      alt=""
+                    />
+                  </a>
+                  <a href="./error404.html" class="pelicula">
+                    <img
+                      src="/img/categorias/infantiles/peppa1.jpeg"
+                      alt=""
+                    />
+                  </a>
+                  <a href="./error404.html" class="pelicula">
+                    <img
+                      src="/img/categorias/infantiles/pucca1.jpeg"
+                      alt=""
+                    />
+                  </a>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="contenedorpeliculas">
+                  <img
+                    src="/img/categorias/infantiles/pocoyo1.jpeg"
+                    class="pelicula"
+                    alt="..."
+                  />
+
+                  <img
+                    src="/img/categorias/infantiles/bluey1.jpeg"
+                    class="pelicula"
+                    alt=""
+                  />
+                  <img
+                    src="/img/categorias/infantiles/blue1.jpeg"
+                    class="pelicula"
+                    alt=""
+                  />
+                  <img
+                    src="/img/categorias/infantiles/pucca1.jpeg"
+                    class="pelicula"
+                    alt=""
+                  />
+                  <img
+                    src="/img/categorias/infantiles/peppa1.jpeg"
+                    class="pelicula"
+                    alt=""
+                  />
+                  <img
+                    src="/img/categorias/infantiles/caillou1.jpeg"
+                    class="pelicula"
+                    alt=""
+                  />
+                </div>
+              </div>
+            </div>
+            <button
+              class="carousel-control-prev bg-dark rounded-circle my-auto mx-2 text-white"
+              style="width: 60px; height: 60px"
+              type="button"
+              data-bs-target="#carouselSerie"
+              data-bs-slide="prev"
+            >
+              <span
+                class="carousel-control-prev-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button
+              class="carousel-control-next bg-dark rounded-circle my-auto mx-2 text-white"
+              style="width: 60px; height: 60px"
+              type="button"
+              data-bs-target="#carouselSerie"
+              data-bs-slide="next"
+            >
+              <span
+                class="carousel-control-next-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        </div>
+      </section>
     </main>
+    <footer>
+      <div class="container-fluid mt-1">
+        <div class="row text-white">
+          <div class="col-xs-12 col-md-4 col-lg-3">
+            <p class="h5">Ubicacion</p>
+            <p>San Martin 345</p>
+            <p>S.M. de Tucuman</p>
+          </div>
+          <div class="col-xs-12 col-md-4 col-lg-3">
+            <p class="h5">Links</p>
+            <div class="mb-2">
+              <a class="text-white text-decoration-none" href="nosotros.html"
+                >Nosotros</a
+              >
+            </div>
+            <div class="mb-2">
+              <a class="text-white text-decoration-none" href="nosotros.html"
+                >Como llegar</a
+              >
+            </div>
+          </div>
+          <div class="col-xs-12 col-md-4 col-lg-3">
+            <p class="h5">Acceso</p>
+            <div class="mb-2">
+              <a class="text-white text-decoration-none" href="login.html"
+                >Login</a
+              >
+            </div>
+            <div class="mb-2">
+              <a class="text-white text-decoration-none" href="registro.html"
+                >Registrarse</a
+              >
+            </div>
+          </div>
+          <div class="col-xs-12 col-md-4 col-lg-3">
+            <p class="h5">Contacto</p>
+            <div class="redes-sociales">
+              <a href="#"><i class="fa-brands fa-instagram"></i></a>
+              <a href="#"><i class="fa-brands fa-twitter"></i></a>
+              <a href="#"><i class="fa-brands fa-facebook"></i></a>
+              <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+              <a href="#"><i class="fa-brands fa-tiktok"></i></a>
+            </div>
+            <div class="mb-2">
+              <a class="text-white text-decoration-none" href="formulario.html"
+                >Fomulario Contacto</a
+              >
+            </div>
+          </div>
+          <div class="col-xs-12">
+            <p class="text-white text-center">
+              Copyright - All right - Grupo 2
+            </p>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!--SCRIP BOOSTRAP-->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+      crossorigin="anonymous"
+    ></script>
+    <!--SCRIP E INICIALIZACION DE AOS ANIMATE-->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
