--- a/nosotros.html
+++ b/nosotros.html
@@ -51,7 +51,7 @@
                         </ul>
                             <form class="d-flex" role="search">
                                 <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
-                            <button class="btn btn-outline-danger" type="submit">Buscar</butto>
+                            <button class="btn btn-secondary" type="submit">Buscar</butto>
                             </form>
                     </div>
                 </div>
