--- a/contacto.html
+++ b/contacto.html
@@ -12,7 +12,7 @@
 
 <body>
   <div class="fondo-contacto">
-  <div class="container my-5">
+  <div class="container-fluid px-3 my-5">
     <div class="tarjeta-contacto">
       <h2 class="text-center mb-2 fw-bold">
         Contacto
