--- a/contacto.html
+++ b/contacto.html
@@ -23,7 +23,7 @@
       <div class="mb-4">
         <p class="mb-0">
           <strong><i class="fas fa-map-marker-alt text-danger me-2"></i>Dirección:</strong>
-          Calle Falsa 123, San Miguel de Tucumán, Argentina
+          Aguilares, San Miguel de Tucumán, Argentina
         </p>
       </div>
 
