guie el formulario a la pag error404

--- a/registro.html
+++ b/registro.html
@@ -10,7 +10,7 @@
 <body>
 
   <section class="registro">
-      <form action="">
+      <form action="/error404.html">
         <label for="plan">Selecciona tu plan</label>
          <select name="plan" id="plan" required>
           <option value="Basico">Basico</option>
